--- a/PLP_Exercícios_Práticas_Programação_Estruturada.ipynb
+++ b/PLP_Exercícios_Práticas_Programação_Estruturada.ipynb
@@ -219,7 +219,7 @@
         "Cigarrosdia = (int(input(\"Informe quantos cigarros você fuma por dia:\")))\n",
         "Tempofumando = (int(input(\"Informe a quanto tempo você fuma:\")))\n",
         "\n",
-        "# Calcular a Média das Notas\n",
+        "# Calcular a Tempo Perdido\n",
         "anos_fumando = tempoperdido (Cigarrosdia, Tempofumando)\n",
         "\n",
         "# Escreva os Resultados Obtidos\n",
