--- a/PLP_Exercícios_Práticas_Programação_Estruturada.ipynb
+++ b/PLP_Exercícios_Práticas_Programação_Estruturada.ipynb
@@ -190,7 +190,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Calculo do tempo que perdeu de vida\n",
+        "#Calculo do tempo fumando\n",
         "def tempoperdido(n1, n2):\n",
         "  return(n1*365*n2*10)"
       ],
@@ -203,6 +203,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Calculo do tempo perdido
         "def tempoemanos(x1):\n",
         "  return int(x1/(24*60))"
       ],
