--- a/PLP_Exercícios_Práticas_Programação_Estruturada.ipynb
+++ b/PLP_Exercícios_Práticas_Programação_Estruturada.ipynb
@@ -203,7 +203,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Calculo do tempo perdido
+        "#Calculo do tempo perdido\n",
         "def tempoemanos(x1):\n",
         "  return int(x1/(24*60))"
       ],
