--- a/PLP_Exercícios_Práticas_Programação_Estruturada.ipynb
+++ b/PLP_Exercícios_Práticas_Programação_Estruturada.ipynb
@@ -227,4 +227,26 @@
         "print(\"O tempo que você perdeu fumando foi de:\", tempoemanos(anos_fumando), \"anos\")\n",
         "\n"
       ],
-     
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mGEoIOBluSui",
+        "outputId": "ba07ff11-f714-46e9-d599-cc796cf08559"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Informe quantos cigarros você fuma por dia:3\n",
+            "Informe a quanto tempo você fuma:3\n",
+            "O tempo que você perdeu fumando foi de: 22 anos\n"
+          ]
+        }
+      ]
+    }
+  ]
+}
+
